# newsletter

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  spec.yaml
ci/: config.yaml
config/: ci.yaml  local.yaml  production.yaml
design/users_stories/: author.md  subscriber.md  visitor.md
migrations/: 20210821214131_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
